--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,71 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Geneva, Tahoma, sans-serif;
+    box-sizing: border-box;
+}
 body {
-    text-align: center;
-    font-family: Arial, sans-serif;
+    background: #47d967e7;
 }
-h1 {
-    color: #333;
+.app {
+    background: #fff;
+    width: 90%;
+    max-width: 600px;
+    margin: 100px auto 0;
+    border-radius: 10px;
+    padding: 30px;
 }
-#dice {
-    font-size: 48px;
-    margin: 20px;
+.app h1 {
+    text-align: left;
+    font-size: 30px;
+    color: #042356;
+    font-weight: 600;
+    border-bottom: 1px solid #333;
+    padding-bottom: 30px;
 }
-#rollButton {
-    padding: 10px 20px;
-    font-size: 24px;
+.quiz{
+    padding: 20px 0;
+}
+.quiz h2{
+    font-size: 19px;
+    color:#001e4d;
+    font-weight: 600px;
+}
+.btn{
+    background: #fff;
+    color: #0c0c0c;
+    font-weight: 500;
+    width: 100%;
+    border:1px solid #222;
+    padding: 10px;
+    margin: 10px 0;
+    text-align: left;
+    border-radius: 4px;
     cursor: pointer;
+    transition: all 0.3s;
+}
+.btn:hover:not([disabled]){
+    background: #333;
+    color: #fff;
+}
+.btn:disabled{
+    cursor: no-drop;
+}
+#next-btn{
+    background: #042356;
+    color: #fff;
+    font-weight: 500;
+    width: 150px;
+    border: 0;
+    padding: 10px;
+    margin: 20px auto 0;
+    border-radius: 4px;
+    cursor: pointer;
+    display: none;
+}
+.correct{
+    background: #72e6a4;
+}
+.incorrect{
+    background: #ee8080;
 }
