cree los archivos .json, package y apliqué nuevas funciones como 'fetch'y otras

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
     cursor: no-drop;
 }
 #next-btn{
-    background: #042356;
+    background: #022b6c;
     color: #fff;
     font-weight: 500;
     width: 150px;
